src/app/globals.css
@import 'tailwindcss';

@custom-variant dark (&:where(.dark, .dark *));

:root {
  --base-100: var(--color-white);
  --base-200: var(--color-neutral-50);
  --base-300: var(--color-neutral-100);
  --base-400: var(--color-neutral-200);
  --base-1000: var(--color-neutral-950);

  --bg: var(--color-neutral-50);
  --border: var(--color-neutral-200);

  --text-strong: var(--color-neutral-900);
  --text-soft: var(--color-neutral-600);

  --base-selection: var(--color-neutral-300);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-neutral-925: oklch(0.175 0 0);
    --color-neutral-350: oklch(0.64 0 0);

    --base-100: var(--color-neutral-900);
    --base-200: var(--color-neutral-800);
    --base-300: var(--color-neutral-700);
    --base-400: var(--color-neutral-600);
    --base-1000: var(--color-white);

    --bg: var(--color-black);
    --border: var(--color-neutral-800);

    --text-strong: var(--color-white);
    --text-soft: var(--color-neutral-400);

    --base-selection: var(--color-neutral-600);
  }
}

@theme {
  --font-sans: var(--font-inter);

  --color-base-100: var(--base-100);
  --color-base-200: var(--base-200);
  --color-base-300: var(--base-300);
  --color-base-400: var(--base-400);
  --color-base-1000: var(--base-1000);

  --color-base-bg: var(--bg);
  --color-base-border: var(--border);

  --text-color-base-strong: var(--text-strong);
  --text-color-base-soft: var(--text-soft);

  --color-base-selection: var(--base-selection);

  --ease-bounce: cubic-bezier(0.2, -0.25, 0, 1.6);
  --ease-bounce-lite: cubic-bezier(0, 0, 0, 1.1);
}

.add-focus {
  @apply focus-visible:ring-base-1000/35 outline-none focus:opacity-100 focus-visible:!z-50 focus-visible:ring focus-visible:transition-shadow *:in-focus:opacity-100;
}

/* animation */

.set-fade {
  opacity: 0;

  @media (prefers-reduced-motion) {
    opacity: 1;
  }
}
.fade {
  animation: fade 0.3s forwards;
  opacity: 0;

  &.fade-sm {
    animation-duration: 0.2s;
  }

  &.fade-lg {
    animation-duration: 0.5s;
  }

  @media (prefers-reduced-motion) {
    animation: none;
  }
}
@keyframes fade {
  to {
    opacity: 1;
  }
}

.set-reveal {
  opacity: 0;
  transform: translateY(0px);

  @media (prefers-reduced-motion) {
    opacity: 1;
    transform: translateY(0px);
  }
}
.reveal {
  animation: reveal 0.8s cubic-bezier(0.3, 0, 0, 1) forwards;
  opacity: 0;
  transform: translateY(40px);

  &.reveal-xs {
    animation-duration: 0.25s;
    transform: translateY(10px);
  }

  &.reveal-sm {
    animation-duration: 0.5s;
    transform: translateY(30px);
  }

  &.reveal-lg {
    animation-duration: 1.2s;
    transform: translateY(50px);
  }

  @media (prefers-reduced-motion) {
    animation: none;
    opacity: 1;
    transform: translateY(0px);
  }
}
@keyframes reveal {
  to {
    transform: translateY(0px);
    opacity: 1;
  }
}

.scaleFade {
  animation: scaleFade 0.5s var(--ease-bounce) forwards;
  opacity: 0;
  transform: scale(0.5);

  @media (prefers-reduced-motion) {
    animation: none;
    opacity: 1;
    transform: scale(1);
  }
}
@keyframes scaleFade {
  to {
    transform: scale(1);
    opacity: 1;
  }
}

.blog-article {
  h2 {
    @apply mt-20 mb-8 text-lg font-medium tracking-tight first-of-type:pt-0;
  }

  p {
    @apply text-base-soft my-4 leading-[1.8em] text-pretty;
  }

  ul {
    li {
      &::marker {
        color: var(--base-400);
      }
      @apply text-base-soft mt-4;
    }

    @apply list-disc;
  }
}

